# MHDmpi

./: README.md
burgers1D/: CMakeCache.txt  Makefile  cmake_install.cmake  input.json  mhd  output0.h5  output1.h5  output2.h5  output3.h5
burgersMPI/: input.json
burgersMPI/postProcessingScripts/: Burgers1DSolution.m  Burgers1DSolution.m~  myMHD.m
burgersMPI/src/: CMakeLists.txt_withMPI  EEDF.h  domainGrid.h  domainGrid.h_save  main.cpp  main.cpp_withMPI  mhd  timeDomain.h
burgersTVD/: MPIhelp  input.json
burgersTVD/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  mhd  output0.h5  output1.h5  output2.h5  output3.h5
burgersTVD/postProcessingScripts/: myMHD.m  myMHD.m~
burgersTVD/src/: EEDF.h  HDF5dataFile.h  (+7 more)
notes/: .buildHelp.txt.un~  buildHelp.txt  buildHelp.txt~  h5tutr_extend.cpp  headerSource_andIncludes.txt  libraryNotes.txt  staticVariables.txt
physicsMods/: .NOTES.un~  NOTES  READ_ME
postProcessingScripts/: .dpf1Dmovies.m.un~  .loadData.m.un~  .mySodShock.m.un~  .mydpfRundown1D.m.un~  .mypinch2D_linearAnalysis.m.un~  .mypinch2D_movies.m.un~  .normalizationParameters_zPinch.m.un~  1DreflectedShockCartesian.m  BennettStability.m  BennettStability_vsGamma.m  BennettStability_vs_ka.m  Btheta.eps  Burgers1DSolution.m  DPFslugModel.m  FourderAmplitude_IdealMHD.eps  GrowthRate_vs_kR.m  Mach_quasi1D_railGun_kJ.eps  Poisson_Solver_2D.m  Poisson_Solver_xz.m  ReflectedShockCartesian.m  ReflectedShockCartesian.m~  Stagnation_1DCartesianDPF_1MA.eps  TempatStag_1DCartesianDPF_1MA.eps  ZpinchEquilibriumProfiles.m  ZpinchEquilibriumProfiles.m~  burgers1D.m  burgers1D.m~  burgers2D.m  dpf1Dmovie.avi  dpf1Dmovies.m  dpf1Dmovies_EnergyPartition.m  dpf1Dmovies_EnergyPartition.m~  dpf1Dmovies_energyConservation.m  dpf1Dmovies_energyConservation.m~  dpf1Dmovies_energyConservation_cyl.m  dpf1Rundown2D.m  dpfRundown1D_lowerHybrid.m  kR10_modeAmplitude_driftIdeal.eps  loadData.m  loadData1DVec.m  (+41 more)
presentations/: 1DmhdShocks.pptx  ~$myMHDcode.pptx
src/: .CMakeLists.txt.un~  .HDF5dataFile.cpp.swo  .HDF5dataFile.cpp.un~  .HDF5dataFile.h.un~  .Physics.h.un~  .domainGrid.cpp.un~  .domainGrid.h.un~  .main.cpp.un~  .matrix2D.cpp.un~  .matrix2D.h.un~  .timeDomain.cpp.un~  .timeDomain.h.un~  .vectorMath.cpp.un~  .vectorMath.h.un~  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  HDF5dataFile.cpp  HDF5dataFile.cpp~  HDF5dataFile.h  HDF5dataFile.h~  Makefile  Physics.h  Physics.h~  burgers1D.cpp  cmake_install.cmake  domainGrid.cpp  domainGrid.cpp~  domainGrid.h  domainGrid.h~  main.cpp  main.cpp~  matrix2D.cpp  matrix2D.cpp~  matrix2D.h  matrix2D.h~  timeDomain.cpp~  timeDomain.h  timeDomain.h~  variables.h  (+4 more)
src/physicsMods/: READ_ME  burgers1D.cpp
(+588 files in other folders)
